# ecom-event-stream

./: .env.example  .gitignore  README.md  pyproject.toml
apps/ingestion/src/: bridge.py  mongo_sink.py  validator.py
apps/ingestion/tests/: test_validator.py
docs/: ingestion-pipeline.md
docs/diagram/: kafka-ingestion.excalidraw
infrastructure/docker/: docker-compose.db.yml  docker-compose.kafka.yml
infrastructure/docker/kafka/: create_topics.sh
scripts/: explore_source.py
shared/config/: settings.py
shared/connectors/: kafka.py  mongodb.py
shared/schemas/: event.py
shared/utils/: logger.py
